test fix for menu icon on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -322,7 +322,8 @@ a:visited { color: #205caa; }
   }
 
   .site-nav:hover .trigger,
-  .site-nav:active .trigger {
+  .site-nav:active .trigger,
+  .site-nav:focus .trigger, {
     display: block;
   }
 
